<resources>
    <string name="app_name">MusicReview</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="search_hint_album">Search album…</string>
    <string name="action_search">Search</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_result_found">Sorry, no results found.</string>
    <string name="home">Home</string>
    <string name="best_of_month">Albums of the month</string>
    <string name="favorites">Favorites</string>
    <string name="navigate_artist">Search by artist</string>
    <string name="recommended">Recommended for you</string>
    <string name="search">Search</string>
    <string name="st_wrong">Something went wrong...Check your connection.</string>
    <string name="retry">Click here to try again</string>
    <string name="title_activity_login">Sign in</string>

    <string name="facebook_app_id">1721631104733583</string>



    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="action_share">Share</string>
    <string name="share_button_desc">Share button</string>
    <string name="spotify">Spotify</string>
    <string name="favorite_albums">Your Favorite Albums</string>
    <string name="login_reminder">Welcome to the MusicReview world. Log in with one of the following options to enjoy all of the functionalities!</string>
    <string name="welcome">Welcome</string>
    <string name="your_mail">Your email address</string>
    <string name="insert_pswd">Insert a password. At least 6 characters</string>
    <string name="log_in">Log In</string>
    <string name="register_here"><u>Click here if you are not registered yet.</u></string>
    <string name="or">or</string>
    <string name="pswd">Your password</string>
    <string name="sign_up">Sign up</string>
    <string name="fill_in_sign_up_forms">Fill in the following forms to sign up.</string>
    <string name="your_name">Your name</string>
    <string name="retype_pswd">Type again your password</string>
    <string name="warning">You must fill in this form to sign up</string>
    <string name="pswd_warning">Password must be at least 6 characters long</string>
    <string name="pwsd_unmatching_warning">The two passwords typed in the forms do not match</string>
    <string name="login_preferences_file_key">com.example.andrea.musicreview.LOGIN_PREFERENCES_KEY</string>
    <string name="log_out">Log out</string>
    <string name="skip">SKIP</string>
    <string name="settings">Settings</string>
    <string name="error_log_with_facebook">You must be logged in with Facebook to see this section.</string>
    <string name="error_log_in_needed">You must be logged in to see this section.</string>
    <string name="similar_artists">Similar artists</string>

</resources>
