<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:background="@color/primary_color_dark"
    tools:context="com.example.andrea.musicreview.activities.LoginActivity">

    <TextView
        android:text="@string/sign_up"
        android:textSize="40sp"
        android:gravity="center"
        android:textColor="@color/text_color_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/info"
        android:text="@string/fill_in_sign_up_forms"
        android:textSize="14sp"
        android:gravity="center"
        android:textColor="@color/text_color_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_forms"
        android:orientation="vertical"
        android:background="@color/primary_color_dark"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_name"
            android:textColor="@color/text_color_dark"
            android:gravity="center_horizontal"
            android:layout_gravity="center"
            android:inputType="text" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_mail"
            android:textColor="@color/text_color_dark"
            android:gravity="center_horizontal"
            android:layout_gravity="center"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/pswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/insert_pswd"
            android:textColor="@color/text_color_dark"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/pswd_retype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/retype_pswd"
            android:textColor="@color/text_color_dark"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:layout_marginBottom="8dp"/>

        <Button
            android:id="@+id/signup_button"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@color/primary_color"
            android:textColor="@color/text_color_light"
            android:text="@string/sign_up" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/general_error_panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" >

        <TextView
            android:id="@+id/error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/dim_foreground_material_dark"
            android:text="Something went wrong..." />

        <TextView
            android:layout_below="@id/error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="14sp"
            android:textColor="@color/dim_foreground_material_dark"
            android:text="Click here to try again" />
    </RelativeLayout>

</LinearLayout>
