<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.luca.jsonsqltest.ReviewDetailFragment">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_color_dark"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/artist_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:layout_marginTop="20dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:textAllCaps="false"
                android:textColor="@color/text_color_light"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/album_tile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/accent_color"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/grade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textColor="@color/dim_foreground_material_dark"
                android:textSize="36sp" />

            <com.example.andrea.musicreview.view.SquareImageView
                android:id="@+id/album_cover"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="16dp"
                android:scaleType="centerCrop" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:src="@color/text_color_dark"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="2"
                     android:background="@color/primary_color_dark"
                     android:orientation="vertical"
                     android:layout_gravity="center"
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp">
                     <!--<LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="vertical"
                         >
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="2015"
                         android:textColor="@color/text_color_dark"
                         android:textSize="16sp" />

                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="RoadRunner"
                         android:textColor="@color/text_color_dark"
                         android:textSize="16sp" />
                     </LinearLayout>-->
                    <ImageButton
                        android:id="@+id/favorite_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/primary_color_dark"
                        android:clickable="true"
                        android:layout_gravity="center"
                        android:src="@mipmap/ic_ic_favorite_border_white_36dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@color/primary_color_dark"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp">

                    <ImageButton
                        android:id="@+id/fb_share"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/primary_color_dark"
                        android:src="@mipmap/ic_share_white_48dp"
                        android:text="@string/action_share"
                        android:contentDescription="@string/share_button_desc" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/primary_color_dark"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp">



                <ImageButton
                    android:id="@+id/play_on_spotify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/primary_color_dark"
                    android:src="@mipmap/play_green"
                    android:text="@string/spotify" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:src="@color/text_color_dark"
                />

            <TextView
                android:id="@+id/album_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/text_color_light"
                android:textSize="18sp" />



        </LinearLayout>

    </ScrollView>

    <include layout="@layout/general_error_layout" />

    <include layout="@layout/loading_panel" />
</FrameLayout>
